using dept44 paging model in the request
